// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-Leaderboard-PodiumSpot-___styles__PodiumSpot___22B_7 src-shared-components-Leaderboard-PodiumSpot-___styles__PodiumSpot--first___1NOMr"
>
  <span
    className="src-shared-components-Leaderboard-PodiumSpot-___styles__leaderboard-avatar___2Aea7"
  >
    <ThemedAvatar
      composeAdhocTheme="deeply"
      composeContextTheme="softly"
      mapThemrProps={[Function]}
      theme={
        Object {
          "avatar": "src-shared-components-Leaderboard-avatarStyles___gold___1KUGNq",
        }
      }
      themePriority="adhoc-context-default"
      url="https://d1aahxkjiobka8.cloudfront.net/avatar/some.fake.string?size=160"
    />
  </span>
  <div
    className="src-shared-components-Leaderboard-PodiumSpot-___styles__ranking___HAFy6"
  >
    1st
  </div>
  <div>
    <a
      className="src-shared-components-Leaderboard-PodiumSpot-___styles__profile-link___n7nJB"
      href="https://www.topcoder-dev.com/members/winner/"
    >
      winner
    </a>
  </div>
  <div
    className="src-shared-components-Leaderboard-PodiumSpot-___styles__winnings-info___2_pZP"
  >
    <span>
      0
       points
    </span>
    <span>
      0
       challenges
    </span>
  </div>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-Leaderboard-PodiumSpot-___styles__PodiumSpot___22B_7 src-shared-components-Leaderboard-PodiumSpot-___styles__PodiumSpot--first___1NOMr"
>
  <span
    className="src-shared-components-Leaderboard-PodiumSpot-___styles__leaderboard-avatar___2Aea7"
  >
    <ThemedAvatar
      composeAdhocTheme="deeply"
      composeContextTheme="softly"
      mapThemrProps={[Function]}
      theme={
        Object {
          "avatar": "src-shared-components-Leaderboard-avatarStyles___gold___1KUGNq",
        }
      }
      themePriority="adhoc-context-default"
      url="https://d1aahxkjiobka8.cloudfront.net/avatar/%2Fassets%2Fa.jpg?size=160"
    />
  </span>
  <div
    className="src-shared-components-Leaderboard-PodiumSpot-___styles__ranking___HAFy6"
  >
    1st
  </div>
  <div>
    <a
      className="src-shared-components-Leaderboard-PodiumSpot-___styles__profile-link___n7nJB"
      href="https://www.topcoder-dev.com/members/winner/"
    >
      winner
    </a>
  </div>
  <div
    className="src-shared-components-Leaderboard-PodiumSpot-___styles__winnings-info___2_pZP"
  >
    <span>
      0
       points
    </span>
    <span>
      0
       challenges
    </span>
  </div>
</div>
`;
